--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -16,13 +16,24 @@ jobs:
       - name: Set up Node.js
         uses: actions/setup-node@v2
         with:
-          node-version: '20'
+          node-version: '16'
 
       - name: Install dependencies
-        run: npm install
+        run: npm install --legacy-peer-deps
 
       - name: Build project
         run: npm run build
+
+      - name: Check SSH connection
+        uses: appleboy/ssh-action@v0.1.0
+        with:
+          host: ${{ secrets.VM_IP }}
+          username: ${{ secrets.VM_USERNAME }}
+          key: ${{ secrets.SSH_PRIVATE_KEY }}
+          port: 22
+          script: |
+            echo "SSH connection successful"
+            ls -la /var/www/html
 
       - name: Copy files via SSH
         uses: appleboy/scp-action@v0.1.0
@@ -33,6 +44,9 @@ jobs:
           port: 22
           source: "dist/*"
           target: "/var/www/html"
+          timeout: 120s
+          command_timeout: 120s
+          debug: true
 
       - name: Restart Web Server
         uses: appleboy/ssh-action@v0.1.0
