--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,7 +3,7 @@ name: Deploy Vite Project
 on:
   push:
     branches:
-      - master
+      - main
 
 jobs:
   build-and-deploy:
@@ -34,6 +34,9 @@ jobs:
           script: |
             echo "SSH connection successful"
             ls -la /var/www/html
+          timeout: 120s
+          command_timeout: 120s
+          debug: true
 
       - name: Copy files via SSH
         uses: appleboy/scp-action@v0.1.0
@@ -57,4 +60,7 @@ jobs:
           port: 22
           script: |
             sudo systemctl restart nginx
+          timeout: 120s
+          command_timeout: 120s
+          debug: true
 
